<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_main"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/edit_text_add_new_spinner_item"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:layout_margin="12sp"
            android:textSize="16sp"
            android:hint="Enter List Name Here"/>
        <Button
            android:id="@+id/save_to_spinner"
            android:layout_width="70sp"
            android:layout_height="40sp"
            android:text="@string/edit_text_create_list"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenButton"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/list_of_items"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:dropDownWidth="200sp"
        android:layout_gravity="center_horizontal"
        android:minWidth="200dp"
        android:layout_marginTop="8sp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/edit_text_add_to_list_view"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:layout_margin="12sp"
            android:textSize="16sp"
            android:hint="Enter List Item To Add"/>
        <Button
            android:id="@+id/add_to_list"
            android:layout_width="70sp"
            android:layout_height="40sp"
            android:text="@string/edit_text_add_to_list"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenButton"/>
    </LinearLayout>

    <ListView
        android:id="@+id/items_list_view"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:scrollbars="vertical"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/update_list_view_edit"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/update_list_item"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:text="@string/button_update"
            android:layout_marginTop="10dp"
            android:background="@color/colorBlueButton"
            android:layout_margin="10sp"/>
        <Button
            android:id="@+id/delete_list_item"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:text="@string/button_delete"
            android:layout_marginTop="10dp"
            android:background="@color/colorRedButton"
            android:layout_margin="10sp"/>
        <Button
            android:id="@+id/add_to_archive"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:text="@string/button_archive"
            android:layout_marginTop="10dp"
            android:background="@color/colorArchive"
            android:layout_margin="10sp"/>
    </LinearLayout>
</LinearLayout>